--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
 	<div class="container">
 		<div class="button-link">click me</div>
 		<div id="open-tag" style="display:none">
-			<p>开放标签，仅微信内可用</p>
+			<p>开放标签，仅微信内可用1</p>
 			<wx-open-launch-weapp class="button-link wx-link" id="launch-btn" username="gh_1e80bb81a1d2" path="/">GOTO</wx-open-launch-weapp>
 		</div>
 	</div>
